--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,10 @@
     "lint:rules": "tslint -p ./rules",
     "lint": "yarn lint:functions && yarn lint:rules",
     "postinstall": "yarn --cwd './functions' install",
-    "execute-tests:functions": "jest './functions'",
-    "execute-tests:rules": "jest './rules'",
+    "execute-tests:functions": "jest ./functions --runInBand",
+    "execute-tests:rules": "jest ./rules --runInBand",
     "test": "yarn test:rules && yarn test:functions",
-    "test:functions": "yarn build:functions && firebase emulators:exec --only firestore,functions 'yarn execute-tests:functions'",
+    "test:functions": "yarn build:functions && firebase emulators:exec --only firestore,functions 'yarn execute-tests:functions' | sed -u -r '/functions:.*(Finished|Beginning)/d'",
     "test:rules": "firebase emulators:exec --only firestore 'yarn execute-tests:rules'",
     "validate:functions": "tsc -p ./functions --noEmit",
     "validate:rules": "tsc -p ./rules --noEmit",
