Add cloud functions source.

--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -6,7 +6,8 @@
   "main": "build/index.js",
   "dependencies": {
     "firebase-admin": "^8.5.0",
-    "firebase-functions": "^3.2.0"
+    "firebase-functions": "^3.2.0",
+    "firestore-size": "^2.0.4"
   },
   "private": true
 }
